@@ -1,5 +1,6 @@
 local MOD_ROOT = "__TheArcFurnaceImp__"
 local furnace_type = settings.startup["ArcFurnace-type"].value
+local furnace_crafting_category = settings.startup["ArcFurnace-crafting-category"].value
 
 data:extend({
 	-- Tech Tree Recipe
@@ -66,7 +67,7 @@ data:extend({
             module_info_icon_shift = {0, 0.8}
         },
         allowed_effects = {"consumption", "speed", "productivity", "pollution"},
-        crafting_categories = {"arc-smelting"},
+        crafting_categories = {furnace_crafting_category},
         result_inventory_size = 2,
         crafting_speed = settings.startup["ArcFurnace-CraftingSpeed"].value,
         energy_usage = "100000kW",
