@@ -15,7 +15,9 @@ arc-furnace=I hope your power grid can support this beast.
 [mod-setting-name]
 ArcFurnace-CraftingSpeed=Crafting speed
 ArcFurnace-type=Type
+ArcFurnace-crafting-category=Crafting category
 [mod-setting-description]
 ArcFurnace-CraftingSpeed=Default is 80, decrease to slow down, increase to speed up.
-ArcFurnace-Type=Default is "furnace". Vanilla furnace-like smelting or selecting recipe like assembling machine.
+ArcFurnace-type=Default is "furnace". Vanilla furnace-like smelting or selecting recipe like assembling machine.
+ArcFurnace-crafting-category=Default is "arc-smelting". Change the crafting category of the arc furnace. "arc-smelting" creates scaled recipe for the arc furnace and "smelting" doesn't. However, when chosing "smelting", due to the limitations of the game engine, it is recommended to use a mod such as "Deadlock Stacked Recipes" to circumvent those game engine limitations.
 
